examples/good/factorial.lk
int N = 6;

int fac(int n) {
  int fact(int n) {
    if (n > 0) {
      return n * fac(n - 1);
    }
    return 1; 
  }

  return fact(n);
}

int main() {
  print(fac(N));
}
