examples/bad/not_initialized_function.lk
int main() {
    (int) => int N;

	N();
}